# StrokeRehab

./: 15-paint-preMerge-arduino send.cpp  CMakeLists.txt  GloveServoClient.ino  GloveServoClient_7buzz_array.ino  client.cpp  server_test.cpp
09-magnets/: 09-magnets.cpp  mainwindow.ui
09-magnets-serverclient/: 09-magnets.cpp
15-paint/: 15-paint.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
15-paint-ServerClient/: 15-paint.cpp
EditedFiles/Desktop-Debug/: CHAI3DTargets.cmake  CMakeCache.txt.prev  Makefile  cmake_install.cmake
EditedFiles/Desktop-Debug/.cmake/api/v1/reply/: target-15-paint-nogui-Debug-32a30e462c9942701710.json  target-cimage-Debug-27000c5978a1600ab59f.json
EditedFiles/Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-8c3fa0827facf4f270ee.json  codemodel-v2-8cbface61d3c1fb46267.json  index-2025-04-23T18-10-20-0297.json  target-cfont-Debug-d39203b7b9cce6dbae43.json
EditedFiles/Desktop-Debug/.qtc_clangd/.cache/clangd/index/: 02-multi-devices.cpp.CDCD5C2D98D1F57A.idx  05-fonts.cpp.926553E0D87A23C0.idx  06-images.cpp.CE287D40A1DF51FF.idx  08-shaders.cpp.8B5D2A1079711C92.idx  09-magnets.cpp.9C73817394BF259E.idx  10-oring.cpp.A4DC917FEA00204C.idx  11-effects.cpp.AAF1E406E9E6F464.idx  12-polygons.cpp.4D50D89FC9B12AC1.idx  13-primitives.cpp.70EFDD2217CF582E.idx  15-paint.cpp.CCBE53FA03EED035.idx  16-friction.cpp.D8B9CAB6E620030B.idx  18-endoscope.cpp.10963B61E352FB7A.idx  19-space.cpp.2BC17A8C4AA3456C.idx  22-chrome.cpp.940C4427F6B30E2C.idx  23-tooth.cpp.D3C5F36E4E4F27C8.idx  24-turntable.cpp.B890C7311037C3D7.idx  25-sounds.cpp.42E653A96CA451C1.idx  28-voxel-basic.cpp.8539BC42B24DEBF8.idx  29-voxel-isosurface.cpp.C69CDF5B21620C3C.idx  30-voxel-colormap.cpp.F2E16B81FDEF97D9.idx  ALu.c.D353AC6D359B2A77.idx  AlignedBox.h.C48195AD729A5E46.idx  AmbiVector.h.29AB8A7FC52EDCB2.idx  Amd.h.7654EEBDC86D996F.idx  AngleAxis.h.3EA7EF0C7B01EBD5.idx  Array.h.35DAD0E4532C5645.idx  ArrayCwiseUnaryOps.h.808717976CF5FC63.idx  ArrayWrapper.h.C3DE5CFF07E0C64F.idx  AssignEvaluator.h.7C748477363662BB.idx  Assign_MKL.h.553E5A46711DB0A9.idx  BDCSVD.h.3A9F9745C0E0E126.idx  BiCGSTAB.h.752CD230708EBF86.idx  BinaryFunctors.h.C6B16123EB0242CA.idx  BlasUtil.h.B7D76939D6A8A017.idx  BlockHouseholder.h.1A10159F18DCBEBA.idx  BooleanRedux.h.730F71EAFD9121BF.idx  CAlgorithmFingerProxy.cpp.7147A1208A53C3F7.idx  CAlgorithmFingerProxy.h.B984AF099F761466.idx  CAlgorithmPotentialField.cpp.25C842BDDC38D157.idx  CAudioBuffer.cpp.D23E046ECF9CF91F.idx  (+715 more)
EditedFiles/examples/GLFW/: CMakeLists.txt
EditedFiles/examples/GLFW/09-magnets/: 09-magnets.cpp  mainwindow.cpp  ui_mainwindow.h
EditedFiles/examples/GLFW/15-paint/: 15-paint.cpp  mainwindow.h  moc_mainwindow.cpp
EditedFiles/examples/GLFW/client/: client.cpp
EditedFiles/src/falconClientServer/: falconClientServer.cpp  falconClientServer.h
EditedFiles/src/system/: CThread.h
GloveServoClient_7buzz/: GloveServoClient_7buzz.ino
aprilTags_resized/: aprilTag gallery.pptx  detect_apriltag.py
client/: client.bak  client.cpp
falconClientServer/: falconClientServer.cpp  falconClientServer.h
position-client/: client.cpp
